# git-local-server

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  LICENCE  Makefile  README.md  justfile  serve-git.sh
src/: cli.rs  git.rs  git_helper.rs  main.rs  server.rs  ui.rs
