[package]
name = "git-local-server"
version = "2.3.0"
edition = "2021"
description = "Initialize and serve local Git repositories"
license = "BSD-2-Clause"

[dependencies]
clap = { version = "4.5.26", features = ["cargo", "derive"] }
dav-server = { version = "0.7.0", features = ["warp-compat"] }
git2 = { version = "0.20.0", features = ["vendored-libgit2"] }
indicatif = "0.17.11"
local-ip-address = "0.6.3"
openssl = { version = "0.10.70", features = ["vendored"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3.7"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
