[package]
name = "git-local-server"
version = "2.4.2"
edition = "2024"
description = "Initialize and serve local Git repositories"
readme = "README.md"
homepage = "https://github.com/guilhermecaldas/git-local-server"
repository = "https://github.com/guilhermecaldas/git-local-server"
license = "BSD-2-Clause"

[dependencies]
clap = { version = "4.5.26", features = ["cargo", "derive"] }
dav-server = { version = "0.11.0", features = ["warp-compat"] }
gix = "0.81.0"
indicatif = "0.18.4"
local-ip-address = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3.7"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
